# fusecraft-rs

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  deny.toml
.claude/skills/pr-review-monitor/: SKILL.md
.claude/skills/pr-review-monitor/scripts/: poll_pr.sh
.github/workflows/: ci.yml
crates/fusecraft-cli/: Cargo.toml
crates/fusecraft-cli/src/: cli.rs  config_io.rs  main.rs
crates/fusecraft-cli/src/commands/: mod.rs  mount.rs  print_default.rs  validate.rs
crates/fusecraft-core/: Cargo.toml
crates/fusecraft-core/src/: config.rs  error.rs  lib.rs  op.rs
crates/fusecraft-core/src/content/: deterministic.rs  mod.rs
crates/fusecraft-core/src/engine/: context.rs  mod.rs
crates/fusecraft-core/src/events/: mod.rs
crates/fusecraft-core/src/limiter/: bandwidth.rs  concurrency.rs  mod.rs
crates/fusecraft-core/src/metrics/: mod.rs
crates/fusecraft-core/src/namespace/: flat.rs  mod.rs
crates/fusecraft-core/src/sampler/: fault.rs  key.rs  latency.rs  mod.rs
crates/fusecraft-core/tests/: config_examples.rs  config_toml.rs
crates/fusecraft-fuser/: Cargo.toml
crates/fusecraft-fuser/src/: lib.rs  mount.rs  opts.rs  reply_helpers.rs
crates/fusecraft-fuser/tests/: advanced_mount.rs  fsync_isolation.rs  fuse_mount.rs  size_tiering.rs  write_mount.rs
crates/fusecraft-fuser/tests/common/: mod.rs
docs/: architecture.md  config.md  fidelity.md  publishing.md
examples/: bandwidth_throttle.toml  fault_injection.toml  fsync_enospc.toml  full.toml  minimal.toml  read_heavy.toml  size_tiered.toml  write_fsync_tail.toml  zero_latency.toml
