[package]
name = "fusecraft-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI binary for fusecraft-rs"

[[bin]]
name = "fusecraft"
path = "src/main.rs"

[dependencies]
fusecraft-core = { path = "../fusecraft-core" }
fusecraft-fuser = { path = "../fusecraft-fuser" }

anyhow.workspace = true
clap.workspace = true
ctrlc.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
