[package]
name = "fusecraft-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Synthetic FUSE filesystem simulator core: latency, faults, concurrency, bandwidth"

[dependencies]
libc.workspace = true
parking_lot.workspace = true
rand.workspace = true
serde.workspace = true
thiserror.workspace = true
hdrhistogram.workspace = true
serde_json.workspace = true

[dev-dependencies]
toml.workspace = true
