[package]
name = "fusecraft-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = "Deterministic simulator core for fusecraft: syscall-visible latency, faults, concurrency limits, and bandwidth throttling for FUSE filesystems."
keywords = ["fuse", "filesystem", "simulator", "testing", "fault-injection"]
categories = ["filesystem", "simulation", "development-tools::testing"]
documentation = "https://docs.rs/fusecraft-core"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
libc.workspace = true
parking_lot.workspace = true
rand.workspace = true
serde.workspace = true
thiserror.workspace = true
hdrhistogram.workspace = true
serde_json.workspace = true

[dev-dependencies]
toml.workspace = true
