[package]
name = "fusecraft-fuser"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "FUSE adapter for fusecraft-rs"

[features]
fuse-tests = []

[dependencies]
fusecraft-core = { path = "../fusecraft-core" }
fuser.workspace = true
libc.workspace = true
tracing.workspace = true
parking_lot.workspace = true

[dev-dependencies]
tempfile = "3"
